name:                dynamic-connectivity
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Alex Lang
maintainer:          me@alang.ca
-- copyright:           
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

  exposed-modules:
    Data.Graph.Dynamic.EulerTour
    Data.Graph.Dynamic.Levels

    Data.Graph.Dynamic.Internal.Avl
    Data.Graph.Dynamic.Internal.Splay
    Data.Graph.Dynamic.Internal.FastAvl
    Data.Graph.Dynamic.Internal.HashTable

  build-depends:
    base >=4.10 && <4.13,
    primitive,
    containers,
    hashtables,
    hashable,
    vector


test-suite dynamic-connectivity-tests
  type: exitcode-stdio-1.0
  main-is: Suite.hs
  hs-source-dirs: tests
  default-language: Haskell2010

  other-modules:
    Action
    Graph
    Data.Graph.Dynamic.Levels.Tests
    Data.Graph.Dynamic.EulerTour.Tests
    Data.Graph.Dynamic.Internal.Splay.Tests
    Data.Graph.Dynamic.Internal.FastAvl.Tests

  build-depends:
    base,
    dynamic-connectivity,
    containers,
    primitive,
    QuickCheck                 >= 2.4,
    test-framework             >= 0.6,
    test-framework-quickcheck2 >= 0.2,
    test-framework-th >= 0.2

benchmark dynamic-connectivity-benchmarks
  Type: exitcode-stdio-1.0
  main-is: bench.hs
  hs-source-dirs: benchmarks
  default-language: Haskell2010
  ghc-options: -Wall -O2 -threaded -rtsopts
  build-depends:
    dynamic-connectivity,
    base,
    criterion

executable foo
  main-is: foo.hs
  hs-source-dirs: benchmarks
  default-language: Haskell2010
  ghc-options: -Wall -O2 -threaded -rtsopts
  build-depends:
    dynamic-connectivity,
                base,
                deepseq
